hidden.scss and visible.scss fixed

--- a/assets/ui-kit/utilities-styles/hidden.scss
+++ b/assets/ui-kit/utilities-styles/hidden.scss
@@ -1,4 +1,4 @@
-*.hidden{
+body .hidden{
   display: none;
   @media (max-width: $media-xl){
     &-xl{
