--- a/assets/ui-kit/utilities-styles/visible.scss
+++ b/assets/ui-kit/utilities-styles/visible.scss
@@ -1,4 +1,4 @@
-*.visible{
+body .visible{
   display: block;
 
   @media (max-width: $media-xl){
